# playwrightgym

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: demonstrator.py  gather_demonstrations.py
src/playwright_gym/: __init__.py  envs.py  playwright_env.py
src/playwright_gym/webtasks/: login-user.html
src/playwrightgym/: __init__.py  login-user.html  playwright_env.py
src/playwrightgym/webtasks/: login-user.html
